[gd_scene load_steps=77 format=3 uid="uid://c1ajgh0vacds8"]

[ext_resource type="Script" path="res://Scripts/Managers/game_manager.gd" id="1_26bor"]
[ext_resource type="Texture2D" uid="uid://1gqahfelhqqa" path="res://icon.svg" id="2_clwek"]
[ext_resource type="PackedScene" uid="uid://bc06ubbfpk0mn" path="res://Escenas/UI/RandomMap.tscn" id="3_bqjtn"]
[ext_resource type="PackedScene" uid="uid://018a4ufmyjnn" path="res://Unidades/Jugador.tscn" id="4_mnaxt"]
[ext_resource type="Script" path="res://Escenas/FPS.gd" id="5_g8tek"]
[ext_resource type="PackedScene" uid="uid://clifhfykt3f42" path="res://Escenas/spawn_manager.tscn" id="7_6dqck"]
[ext_resource type="Script" path="res://Scripts/Managers/upgrades_manager.gd" id="9_nhmv0"]
[ext_resource type="Resource" uid="uid://y4nv34qlp5ad" path="res://Ataques/Cards/AttackCards/card_axe_tornado.tres" id="10_1an7i"]
[ext_resource type="Resource" uid="uid://qnmicgktt2lh" path="res://Ataques/Cards/AttackCards/card_spear.tres" id="11_ukgdt"]
[ext_resource type="Resource" uid="uid://bbbki8jrdnmy" path="res://Ataques/Cards/AttackCards/card_attack_hammer.tres" id="12_0kujb"]
[ext_resource type="Resource" uid="uid://b6frtlih546hw" path="res://Ataques/Cards/AttackCards/card_attack_orbital_shield.tres" id="13_3ejow"]
[ext_resource type="Resource" uid="uid://blndcy50e5xxt" path="res://Ataques/Cards/Upgrades/Dagger/upgrade_dagger_damage.tres" id="14_4tncr"]
[ext_resource type="Resource" uid="uid://drhxrenc2p8dq" path="res://Ataques/Cards/Upgrades/Dagger/upgrade_dagger_speed.tres" id="15_04sxn"]
[ext_resource type="Resource" uid="uid://raxpe4phplnx" path="res://Ataques/Cards/Upgrades/Dagger/upgrade_dagger_extra.tres" id="16_67sdu"]
[ext_resource type="Resource" uid="uid://bpcwlq804lalq" path="res://Ataques/Cards/Upgrades/Dagger/upgrade_dagger_shotgun.tres" id="17_vrlp7"]
[ext_resource type="Resource" uid="uid://dbo2u74r06vta" path="res://Ataques/Cards/Upgrades/Dagger/upgrade_dagger_separation.tres" id="18_xuy0x"]
[ext_resource type="Resource" uid="uid://ckgbassjybv1c" path="res://Ataques/Cards/Upgrades/Spear/upgrade_spear_cdr.tres" id="19_2fl4y"]
[ext_resource type="Resource" uid="uid://dsx7l1gexqso4" path="res://Ataques/Cards/Upgrades/Spear/upgrade_spear_damage.tres" id="20_ykwxa"]
[ext_resource type="Resource" uid="uid://b4dnvc1s1b8hk" path="res://Ataques/Cards/Upgrades/Spear/upgrade_spear_extra.tres" id="21_11uyt"]
[ext_resource type="Resource" uid="uid://df74wgwbq46e0" path="res://Ataques/Cards/Upgrades/AxeTornado/upgrade_axe_tornado_damage.tres" id="22_kiohr"]
[ext_resource type="Resource" uid="uid://cwlqaaf3grqut" path="res://Ataques/Cards/Upgrades/AxeTornado/upgrade_axe_tornado_extra.tres" id="23_pruvh"]
[ext_resource type="Resource" uid="uid://dcbcl3knuti37" path="res://Ataques/Cards/Upgrades/AxeTornado/upgrade_axe_tornado_size.tres" id="24_m5dli"]
[ext_resource type="Resource" uid="uid://dndho73oidj0c" path="res://Ataques/Cards/Upgrades/Hammer/upgrade_hammer_cdr.tres" id="25_66lpl"]
[ext_resource type="Resource" uid="uid://c4fp3oqpmvonu" path="res://Ataques/Cards/Upgrades/Hammer/upgrade_hammer_damage.tres" id="26_ljgfh"]
[ext_resource type="Resource" uid="uid://ceawcbxi50lbt" path="res://Ataques/Cards/Upgrades/Hammer/upgrade_hammer_extra.tres" id="27_gpeql"]
[ext_resource type="Resource" uid="uid://c3yn7aksdx20y" path="res://Ataques/Cards/Upgrades/Hammer/upgrade_hammer_fragile.tres" id="28_lcuqb"]
[ext_resource type="Resource" uid="uid://p54wqpwabycu" path="res://Ataques/Cards/Upgrades/Shield/upgrade_shield_speed.tres" id="29_0a6le"]
[ext_resource type="Resource" uid="uid://cw74qactjowd2" path="res://Ataques/Cards/Upgrades/Shield/upgrade_shield_extra.tres" id="30_rmwiu"]
[ext_resource type="Resource" uid="uid://b75slxbvkur5d" path="res://Ataques/Cards/Upgrades/Shield/upgrade_shield_solid.tres" id="31_6uip4"]
[ext_resource type="Resource" uid="uid://byx2wknk8mxg2" path="res://Ataques/Cards/Upgrades/Shield/upgrade_shield_damage.tres" id="32_7dwbv"]
[ext_resource type="Resource" uid="uid://dkq8qy6fgifh2" path="res://Ataques/Cards/Upgrades/Player/upgrade_player_attack.tres" id="33_63gyb"]
[ext_resource type="Resource" uid="uid://bj3xhvysqa8c7" path="res://Ataques/Cards/Upgrades/Player/upgrade_player_health.tres" id="34_ej7bj"]
[ext_resource type="Resource" uid="uid://3euts7ur0ecs" path="res://Ataques/Cards/Upgrades/Player/upgrade_player_speed.tres" id="35_s1alt"]
[ext_resource type="PackedScene" uid="uid://37ic61k0lk5u" path="res://panel_player_level_up.tscn" id="36_y4w8f"]
[ext_resource type="PackedScene" uid="uid://bx528sl58swbt" path="res://Escenas/UI/PauseMenuUI.tscn" id="37_r1evg"]
[ext_resource type="PackedScene" uid="uid://fvh70jxidati" path="res://Escenas/UI/OptionsMenuUI.tscn" id="38_ulj80"]
[ext_resource type="Script" path="res://Scripts/Managers/statistics_manager.gd" id="39_xpau7"]
[ext_resource type="Resource" uid="uid://d1wb3p8qsqfok" path="res://Achievements/survive_5.tres" id="40_ibs67"]
[ext_resource type="Resource" uid="uid://d383axgfs4ng" path="res://Achievements/survive_10.tres" id="41_qnbln"]
[ext_resource type="Resource" uid="uid://cwk1q70wne3ee" path="res://Achievements/survive_15.tres" id="42_qbavc"]
[ext_resource type="Resource" uid="uid://0v6plgs6we8y" path="res://Achievements/survive_20.tres" id="43_3xvoy"]
[ext_resource type="Resource" uid="uid://c20fouyxp2s52" path="res://Achievements/survive_30.tres" id="44_ur8a2"]
[ext_resource type="Resource" uid="uid://pdk2h0cwda18" path="res://Achievements/kill_rats_200.tres" id="45_4ai3m"]
[ext_resource type="Resource" uid="uid://mwbi200o12cw" path="res://Achievements/kill_rats_5000.tres" id="45_un61j"]
[ext_resource type="Resource" uid="uid://dby48i7hdjuf5" path="res://Achievements/kill_rats_1000.tres" id="46_21kau"]
[ext_resource type="Resource" uid="uid://d1np0solx0n67" path="res://Achievements/kill_bats_2000.tres" id="47_hxykk"]
[ext_resource type="Resource" uid="uid://c2btpyvp0ocx5" path="res://Achievements/kill_bats_200.tres" id="48_fvklg"]
[ext_resource type="Resource" uid="uid://d2gv5cp5y2h4f" path="res://Achievements/kill_spiders_200.tres" id="50_f7tm0"]
[ext_resource type="Resource" uid="uid://2tfr62k34ray" path="res://Achievements/kill_spiders_1000.tres" id="51_euapn"]
[ext_resource type="Resource" uid="uid://cfgxqmxm8kyoe" path="res://Achievements/kill_crabs_200.tres" id="52_hols1"]
[ext_resource type="Resource" uid="uid://dwwwp7qu1rfgl" path="res://Achievements/kill_crabs_1000.tres" id="53_yp7ie"]
[ext_resource type="Resource" uid="uid://ca8nkdx6o0k2f" path="res://Achievements/kill_ghosts_200.tres" id="54_462lj"]
[ext_resource type="Resource" uid="uid://cqsunbg1lj3c" path="res://Achievements/kill_ghosts_1000.tres" id="55_ow6w2"]
[ext_resource type="Resource" uid="uid://7jx7je2ebx6y" path="res://Achievements/kill_big_ghosts_500.tres" id="56_e41rm"]
[ext_resource type="Resource" uid="uid://clk5dcyoggs6o" path="res://Achievements/kill_giants_200.tres" id="56_kllne"]
[ext_resource type="Resource" uid="uid://ddfwsvs4fcj7f" path="res://Achievements/kill_giants_1000.tres" id="57_gx3kq"]
[ext_resource type="Resource" uid="uid://bw42gwf0b4tl1" path="res://Achievements/kill_big_ghosts_1000.tres" id="59_pln2n"]
[ext_resource type="Resource" uid="uid://ceuqsitl7gklm" path="res://Achievements/kill_boss.tres" id="60_neky3"]
[ext_resource type="Resource" uid="uid://bb74v8olsrp6p" path="res://Achievements/kill_boss_5.tres" id="61_k2qfk"]
[ext_resource type="Resource" uid="uid://bd3c2fawimgh8" path="res://Achievements/secret_1.tres" id="62_idmyy"]
[ext_resource type="Resource" uid="uid://dnacyxtmygdya" path="res://Achievements/secret_10.tres" id="63_twe7h"]
[ext_resource type="Resource" uid="uid://bypfyqp6m28cg" path="res://Achievements/only_dagger.tres" id="64_5v5em"]
[ext_resource type="Resource" uid="uid://cg18aec4g8biy" path="res://Achievements/barrels_destroyed_5.tres" id="64_qfdqj"]
[ext_resource type="Resource" uid="uid://bicwt7hde3a5i" path="res://Achievements/barrels_destroyed_20.tres" id="65_18d2v"]
[ext_resource type="AudioStream" uid="uid://3sc70rlbfwf" path="res://Sonidos/Musica/GameSong.ogg" id="65_pf18o"]
[ext_resource type="AudioStream" uid="uid://cenn0kcu5610u" path="res://Sonidos/Musica/BossSong.ogg" id="66_dr7i6"]
[ext_resource type="AudioStream" uid="uid://cn3mcy0sy1bo8" path="res://Sonidos/gameover4.ogg" id="67_105kh"]
[ext_resource type="PackedScene" uid="uid://bwv5jj37ggwj1" path="res://Escenas/Items/collectible_item.tscn" id="68_t4yak"]
[ext_resource type="Resource" uid="uid://cgiq4dojmsie7" path="res://Collectibles/CelulasPadre.tres" id="69_1olp6"]
[ext_resource type="Resource" uid="uid://c5c2qpy4hrfig" path="res://Collectibles/Flecha.tres" id="70_pmd1i"]
[ext_resource type="Resource" uid="uid://csdn06jay30n" path="res://Collectibles/Mu√±ecoNieve.tres" id="70_qgu12"]
[ext_resource type="Resource" uid="uid://crd88fy03aqmt" path="res://Collectibles/LlaveCiudad.tres" id="71_hqen6"]
[ext_resource type="Resource" uid="uid://cwuyf6u23ax6r" path="res://Collectibles/Log.tres" id="72_hevrk"]
[ext_resource type="Resource" uid="uid://clc18sh8u8wq1" path="res://Collectibles/Moneda.tres" id="73_7s020"]
[ext_resource type="Resource" uid="uid://1yjib7wvu7ol" path="res://Collectibles/Pala.tres" id="74_o7vfa"]
[ext_resource type="Resource" uid="uid://0hnuiwt587qs" path="res://Collectibles/Yunque.tres" id="75_lmk67"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_26bor")

[node name="Fondo" type="Sprite2D" parent="."]
visible = false
position = Vector2(612, 248.5)
scale = Vector2(28.1875, 18.1953)
texture = ExtResource("2_clwek")

[node name="MapGenerator" parent="." instance=ExtResource("3_bqjtn")]

[node name="CharacterBody2D" parent="." instance=ExtResource("4_mnaxt")]
position = Vector2(234, 276)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(1.6, 1.6)

[node name="LabelHealth" type="Label" parent="CharacterBody2D/Camera2D"]
visible = false
offset_left = 339.0
offset_top = -310.0
offset_right = 437.0
offset_bottom = -271.0
theme_override_colors/font_color = Color(0, 0.443137, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 32
text = "Health: "

[node name="LabelExperience" type="Label" parent="CharacterBody2D/Camera2D"]
visible = false
offset_left = 326.0
offset_top = -252.0
offset_right = 493.0
offset_bottom = -207.0
theme_override_font_sizes/font_size = 30
text = "Experience:"

[node name="LabelExperience2" type="Label" parent="CharacterBody2D/Camera2D"]
visible = false
offset_left = 323.0
offset_top = -217.0
offset_right = 490.0
offset_bottom = -172.0
theme_override_font_sizes/font_size = 30
text = "Experience:"

[node name="Label" type="Label" parent="CharacterBody2D/Camera2D"]
offset_left = -333.0
offset_top = -205.0
offset_right = -272.0
offset_bottom = -152.0
theme_override_colors/font_color = Color(0, 0.419608, 0, 1)
theme_override_font_sizes/font_size = 36
text = "FPS"
script = ExtResource("5_g8tek")

[node name="Spawner" parent="." instance=ExtResource("7_6dqck")]
position = Vector2(229, 487)
interval_enemy_level_up_value = 70.0
timer_spawn_value = 1.2
wave_enemy_quantity = 18

[node name="UpgradeManager" type="Marker2D" parent="."]
script = ExtResource("9_nhmv0")
attacks_directory = "res://Ataques/Cards/AttackCards"
upgrades_directory = "res://Ataques/Cards/Upgrades"
all_card_attacks = Array[Resource("res://Scripts/card_skill.gd")]([ExtResource("10_1an7i"), ExtResource("11_ukgdt"), ExtResource("12_0kujb"), ExtResource("13_3ejow")])
all_card_upgrades = Array[Resource("res://Scripts/card_skill.gd")]([ExtResource("14_4tncr"), ExtResource("15_04sxn"), ExtResource("16_67sdu"), ExtResource("17_vrlp7"), ExtResource("18_xuy0x"), ExtResource("19_2fl4y"), ExtResource("20_ykwxa"), ExtResource("21_11uyt"), ExtResource("22_kiohr"), ExtResource("23_pruvh"), ExtResource("24_m5dli"), ExtResource("25_66lpl"), ExtResource("26_ljgfh"), ExtResource("27_gpeql"), ExtResource("28_lcuqb"), ExtResource("29_0a6le"), ExtResource("30_rmwiu"), ExtResource("31_6uip4"), ExtResource("32_7dwbv"), ExtResource("33_63gyb"), ExtResource("34_ej7bj"), ExtResource("35_s1alt")])

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" parent="UI" instance=ExtResource("36_y4w8f")]
visible = false

[node name="Stats" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="ButtonPauseGame" type="Button" parent="UI"]
offset_left = 958.0
offset_top = 45.0
offset_right = 1018.0
offset_bottom = 76.0
text = "PAUSA"

[node name="PauseMenuUI" parent="UI" instance=ExtResource("37_r1evg")]
visible = false

[node name="LabelTime" type="Label" parent="UI"]
offset_left = 509.0
offset_top = 38.0
offset_right = 588.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 28
text = "02: 30"

[node name="LabelLevel" type="Label" parent="UI"]
offset_left = 511.0
offset_top = -3.0
offset_right = 585.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "Nivel: 1"

[node name="OptionsMenuUI" parent="UI" instance=ExtResource("38_ulj80")]
visible = false
on_main_menu = false

[node name="StatisticsManager" type="Node" parent="."]
process_mode = 3
script = ExtResource("39_xpau7")
array_achievements = Array[Resource("res://Scripts/achievement.gd")]([ExtResource("40_ibs67"), ExtResource("41_qnbln"), ExtResource("42_qbavc"), ExtResource("43_3xvoy"), ExtResource("44_ur8a2"), ExtResource("45_4ai3m"), ExtResource("46_21kau"), ExtResource("45_un61j"), ExtResource("48_fvklg"), ExtResource("47_hxykk"), ExtResource("50_f7tm0"), ExtResource("51_euapn"), ExtResource("52_hols1"), ExtResource("53_yp7ie"), ExtResource("54_462lj"), ExtResource("55_ow6w2"), ExtResource("56_kllne"), ExtResource("57_gx3kq"), ExtResource("56_e41rm"), ExtResource("59_pln2n"), ExtResource("60_neky3"), ExtResource("61_k2qfk"), ExtResource("62_idmyy"), ExtResource("63_twe7h"), ExtResource("64_qfdqj"), ExtResource("65_18d2v"), ExtResource("64_5v5em")])
array_collectibles = Array[Resource("res://Scripts/collectible.gd")]([ExtResource("69_1olp6"), ExtResource("70_pmd1i"), ExtResource("71_hqen6"), ExtResource("72_hevrk"), ExtResource("73_7s020"), ExtResource("70_qgu12"), ExtResource("74_o7vfa"), ExtResource("75_lmk67")])

[node name="Timers" type="Node" parent="."]

[node name="TimerShieldUnlock" type="Timer" parent="Timers"]
wait_time = 200.0
one_shot = true
autostart = true

[node name="TimerAxeStormUnlock" type="Timer" parent="Timers"]
wait_time = 360.0
one_shot = true
autostart = true

[node name="BGSong" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("65_pf18o")
volume_db = -5.393
autoplay = true
bus = &"Music"

[node name="BossSong" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("66_dr7i6")
volume_db = -8.0
bus = &"Music"

[node name="SoundPlayerDead" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("67_105kh")
volume_db = -5.0
bus = &"Sound"

[node name="Collectible" parent="." instance=ExtResource("68_t4yak")]
position = Vector2(299, 209)
item = ExtResource("69_1olp6")

[node name="Collectible2" parent="." instance=ExtResource("68_t4yak")]
position = Vector2(377, 177)
item = ExtResource("70_pmd1i")

[node name="Collectible3" parent="." instance=ExtResource("68_t4yak")]
position = Vector2(409, 253)
item = ExtResource("71_hqen6")

[node name="Collectible4" parent="." instance=ExtResource("68_t4yak")]
position = Vector2(229, 179)
item = ExtResource("72_hevrk")

[node name="Collectible5" parent="." instance=ExtResource("68_t4yak")]
position = Vector2(349, 273)
item = ExtResource("73_7s020")

[node name="Collectible6" parent="." instance=ExtResource("68_t4yak")]
position = Vector2(127, 221)
item = ExtResource("74_o7vfa")

[node name="Collectible7" parent="." instance=ExtResource("68_t4yak")]
position = Vector2(295, 139)
item = ExtResource("75_lmk67")

[connection signal="timeout" from="Timers/TimerShieldUnlock" to="." method="_on_timer_shield_unlock_timeout"]
[connection signal="timeout" from="Timers/TimerAxeStormUnlock" to="." method="_on_timer_axe_storm_unlock_timeout"]
